fix align

--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,14 @@
     padding-top: 20px;
     padding-bottom: 20px;
 
+    @media (min-width: 320px) {
+      align-items: center;
+    }
+
+    @media (min-width: 768px) {
+      align-items: start;
+    }
+
     @media (min-width: 992px) {
       min-height: 314px;
       margin-left: 33px;
